# DockerHelloWorld

./: CMakeLists.txt
include/: bird.h  hello.h
src/: bird.cpp  hello.cpp  main.cpp
